--- a/src/main/webapp/main.html
+++ b/src/main/webapp/main.html
@@ -6,6 +6,7 @@
 <script language="javascript" src="coreview/coreview.nocache.js"></script>
 <link rel="stylesheet" type="text/css" href="main_style.css">
 <link rel="stylesheet" type="text/css" href="note_style.css">
+<link rel="stylesheet" type="text/css" href="group_style.css">
 <script type="text/javascript"
 	src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="scripts/jquery.tokeninput.js"></script>
